--- a/infl-styles/_modal_dialog.scss
+++ b/infl-styles/_modal_dialog.scss
@@ -104,7 +104,8 @@
 
     .pt-modal-header {
       margin-bottom: 18px;
-      padding: 0px 24px;
+      padding-left: 24px;
+      margin-right: 50px;
 
       h3 {
         margin: 0px;
